@@ -35,6 +35,9 @@ PHP                                                                        NEWS
   . Fixed bug #60160 (imagefill() doesn't work correctly
     for small images). (Florian)
     
+- Mbstring:
+  . Fixed possible crash in mb_ereg_search_init() using empty pattern. (Felipe)
+    
 - MS SQL:
   . Fixed bug #60267 (Compile failure with freetds 0.91). (Felipe)
 
